--- a/index.html
+++ b/index.html
@@ -3,75 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aamir Pro | Digital Agency</title>
+    <title>Aamir Pro | Shaheen Agency</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root { --bg: #0d0d0d; --card-bg: #1a1a1a; --red: #ff3131; --yellow: #ffbd14; --text-gray: #b0b0b0; }
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
         body { background-color: var(--bg); color: #fff; }
 
-        /* --- Header: Exactly as your Original --- */
+        /* --- Original Header with Search & Real Logo --- */
         header { 
-            padding: 25px 5%; background: #000; display: flex; justify-content: space-between; align-items: center;
+            padding: 15px 5%; background: #000; display: flex; justify-content: space-between; align-items: center;
             border-bottom: 2px solid var(--red); position: relative;
         }
         header::after { content: ''; position: absolute; bottom: -2px; right: 0; width: 35%; height: 2px; background: var(--yellow); }
         
-        /* Real Shaheen Logo Integration */
-        .logo-box { display: flex; align-items: center; gap: 10px; }
-        .shaheen-icon { font-size: 30px; color: var(--yellow); filter: drop-shadow(0 0 5px var(--red)); }
-        .logo { font-size: 24px; font-weight: 800; }
+        /* Real Shaheen Logo Style */
+        .logo-box { display: flex; align-items: center; gap: 12px; }
+        .shaheen-img { width: 50px; height: 50px; object-fit: contain; filter: drop-shadow(0 0 5px var(--yellow)); }
+        .logo { font-size: 24px; font-weight: 800; text-transform: uppercase; }
         .logo span { color: var(--red); }
-        .nav-meta { display: flex; gap: 15px; font-size: 13px; color: #666; align-items: center; }
+
+        /* Search & Menu Tabs */
+        .header-right { display: flex; align-items: center; gap: 20px; }
+        .search-container { position: relative; display: flex; align-items: center; }
+        .search-container input { 
+            background: #1a1a1a; border: 1px solid #333; color: #fff; padding: 8px 35px 8px 15px; 
+            border-radius: 20px; outline: none; font-size: 13px; width: 150px;
+        }
+        .search-container i { position: absolute; right: 12px; color: var(--yellow); cursor: pointer; }
+        .menu-tab { font-size: 22px; color: #fff; cursor: pointer; }
 
         /* --- Hero Section --- */
-        .hero { display: flex; align-items: center; padding: 80px 5%; gap: 50px; flex-wrap: wrap; }
+        .hero { display: flex; align-items: center; padding: 60px 5%; gap: 50px; flex-wrap: wrap; }
         .profile-box { 
-            width: 190px; height: 190px; border-radius: 50%; padding: 7px;
+            width: 180px; height: 180px; border-radius: 50%; padding: 7px;
             background: linear-gradient(135deg, var(--yellow), var(--red));
             box-shadow: 0 0 30px rgba(255, 49, 49, 0.4);
         }
         .profile-img { width: 100%; height: 100%; border-radius: 50%; object-fit: cover; border: 5px solid #000; }
-        .hero-info h1 { font-size: 3.5rem; font-weight: 800; margin: 5px 0; }
+        .hero-info h1 { font-size: 3rem; font-weight: 800; }
         .hero-info h1 span { color: var(--yellow); }
-        .hero-info p { color: var(--text-gray); max-width: 450px; margin-bottom: 30px; line-height: 1.6; }
-        .btn-touch { background: var(--yellow); color: #000; padding: 14px 35px; border-radius: 30px; text-decoration: none; font-weight: 800; }
 
-        /* --- 4 Clickable Large Skills --- */
-        .label { padding: 40px 5% 20px; font-size: 22px; font-weight: 700; color: #fff; }
-        .skills-stack { padding: 0 5%; display: flex; flex-direction: column; gap: 20px; }
+        /* --- 4 Clickable Skills (Modified) --- */
+        .label { padding: 40px 5% 10px; font-size: 22px; font-weight: 700; color: var(--yellow); }
+        .skills-stack { padding: 0 5%; display: flex; flex-direction: column; gap: 15px; }
         .skill-tile { 
-            background: var(--card-bg); border-radius: 15px; display: flex; align-items: center; 
-            padding: 35px; text-decoration: none; color: white; border-left: 12px solid var(--red);
-            transition: 0.4s;
+            background: var(--card-bg); border-radius: 12px; display: flex; align-items: center; 
+            padding: 30px; text-decoration: none; color: white; border-left: 10px solid var(--red);
+            transition: 0.3s;
         }
-        .skill-tile:hover { transform: scale(1.02); background: #222; border-left-color: var(--yellow); }
-        .icon-wrap { width: 60px; height: 60px; background: #000; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 26px; margin-right: 25px; }
+        .skill-tile:hover { transform: translateX(10px); background: #222; border-left-color: var(--yellow); }
+        .icon-wrap { font-size: 30px; margin-right: 25px; width: 50px; text-align: center; }
 
-        /* --- Footer Side-by-Side --- */
+        /* --- Footer (Side-by-Side) --- */
         .footer-tiles { 
             display: grid; grid-template-columns: repeat(3, 1fr); 
-            gap: 20px; padding: 50px 5%; background: #000; margin-top: 60px;
+            gap: 20px; padding: 50px 5%; background: #000; margin-top: 50px; border-top: 2px solid #222;
         }
-        .f-card { background: #141414; padding: 30px; border-radius: 15px; }
-        .f-card h4 { color: var(--yellow); margin-bottom: 20px; font-size: 16px; text-transform: uppercase; }
-        .f-card p, .f-card a { color: var(--text-gray); font-size: 14px; text-decoration: none; display: block; margin-bottom: 12px; }
-        .f-socials { display: flex; gap: 12px; margin-top: 20px; }
-        .f-socials i { font-size: 20px; width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; border-radius: 50%; background: #222; }
+        .f-card h4 { color: var(--yellow); margin-bottom: 15px; font-size: 14px; text-transform: uppercase; }
+        .f-card p, .f-card a { color: var(--text-gray); font-size: 13px; text-decoration: none; display: block; margin-bottom: 10px; }
+        .f-socials { display: flex; gap: 15px; margin-top: 15px; }
+        .f-socials i { font-size: 20px; transition: 0.3s; }
+        .f-socials i:hover { color: var(--yellow); }
 
-        @media (max-width: 850px) {
-            .footer-tiles { grid-template-columns: 1fr; }
-        }
+        @media (max-width: 850px) { .footer-tiles { grid-template-columns: 1fr; } .search-container input { width: 100px; } }
     </style>
 </head>
 <body>
 
     <header>
         <div class="logo-box">
-            <i class="fas fa-dove shaheen-icon"></i>
+            <img src="https://cdn-icons-png.flaticon.com/512/217/217032.png" alt="Shaheen" class="shaheen-img">
             <div class="logo">AAMIR<span>PRO</span></div>
         </div>
-        <div class="nav-meta">menu | search <i class="fas fa-search"></i> <i class="fas fa-bars-staggered" style="color:var(--yellow)"></i></div>
+        <div class="header-right">
+            <div class="search-container">
+                <input type="text" placeholder="Search...">
+                <i class="fas fa-search"></i>
+            </div>
+            <div class="menu-tab"><i class="fas fa-bars-staggered"></i></div>
+        </div>
     </header>
 
     <section class="hero">
@@ -79,41 +90,48 @@
             <img src="profile.jpg" alt="Aamir Ahmad" class="profile-img">
         </div>
         <div class="hero-info">
-            <h2>I'm</h2>
-            <h1>Aamir <span>Ahmad</span></h1>
+            <h2>Specialist</h2>
+            <h1>AAMIR <span>AHMAD</span></h1>
             <p>Digital Marketing Expert | 3 Years scaling brands via Facebook & TikTok Ads.</p>
-            <a href="https://wa.me/923482066656" class="btn-touch">GET IN TOUCH</a>
         </div>
     </section>
 
-    <div class="label">Skills-section</div>
+    <div class="label">Our Expertise</div>
     <div class="skills-stack">
         <a href="facebook.html" class="skill-tile">
             <div class="icon-wrap"><i class="fab fa-facebook-f" style="color:#1877F2"></i></div>
-            <div class="info"><h3>Facebook Marketing Specialist</h3><p>Click for full details.</p></div>
+            <div class="info"><h3>Facebook Marketing Specialist</h3><p>Data-driven scaling strategies.</p></div>
         </a>
         <a href="tiktok.html" class="skill-tile">
             <div class="icon-wrap"><i class="fab fa-tiktok" style="color:#00f2ea"></i></div>
-            <div class="info"><h3>TikTok Ad Strategist</h3><p>Click for growth strategies.</p></div>
+            <div class="info"><h3>TikTok Ad Strategist</h3><p>Viral content and high ROAS.</p></div>
         </a>
         <a href="ecommerce.html" class="skill-tile">
             <div class="icon-wrap"><i class="fas fa-shopping-cart" style="color:var(--yellow)"></i></div>
-            <div class="info"><h3>E-commerce Expert</h3><p>Click for store management.</p></div>
+            <div class="info"><h3>E-commerce Expert</h3><p>Complete store management.</p></div>
         </a>
         <a href="developer.html" class="skill-tile">
             <div class="icon-wrap"><i class="fas fa-code" style="color:var(--red)"></i></div>
-            <div class="info"><h3>Website Developer</h3><p>Click for portfolio projects.</p></div>
+            <div class="info"><h3>Website Developer</h3><p>High-converting landing pages.</p></div>
         </a>
     </div>
 
     <div class="footer-tiles">
-        <div class="f-card"><h4>About Me</h4><p>Professional Digital Marketer for 3 years.</p></div>
-        <div class="f-card"><h4>Contact</h4><a href="mailto:lftaamir8@gmail.com">lftaamir8@gmail.com</a><p>+92 348 2066656</p></div>
-        <div class="f-card"><h4>Socials</h4>
+        <div class="f-card">
+            <h4>About Me</h4>
+            <p>Helping brands grow with 3 years of digital advertising experience.</p>
+        </div>
+        <div class="f-card">
+            <h4>Contact</h4>
+            <p>lftaamir8@gmail.com</p>
+            <a href="https://wa.me/923482066656" style="color: #25D366; font-weight: bold;"><i class="fab fa-whatsapp"></i> WhatsApp Me</a>
+        </div>
+        <div class="f-card">
+            <h4>Socials</h4>
             <div class="f-socials">
-                <i class="fab fa-facebook" style="color:#1877F2"></i>
-                <i class="fab fa-instagram" style="color:#E4405F"></i>
-                <i class="fab fa-whatsapp" style="color:#25D366"></i>
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-linkedin"></i>
             </div>
         </div>
     </div>
